Configured content and group display

--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -63,6 +63,7 @@ third_party_settings:
     regions:
       top_left:
         - field_summary
+        - field_location
         - group_site_menu_entity_view_1
       top_right:
         - field_portrait
@@ -85,44 +86,27 @@ mode: default
 content:
   field_address:
     type: address_default
-    weight: 8
+    weight: 9
     region: center_right
     label: visually_hidden
     settings: {  }
     third_party_settings: {  }
   field_email:
     type: email_mailto
-    weight: 3
+    weight: 4
     region: center_left
     label: visually_hidden
     settings: {  }
     third_party_settings: {  }
   field_facebook:
     type: string
-    weight: 5
+    weight: 6
     region: center_center
     label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
   field_featured_content:
-    type: entity_reference_entity_view
-    weight: 9
-    region: bottom_center
-    label: above
-    settings:
-      view_mode: featured
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-  field_featured_groups:
     type: entity_reference_entity_view
     weight: 10
     region: bottom_center
@@ -139,8 +123,25 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+  field_featured_groups:
+    type: entity_reference_entity_view
+    weight: 11
+    region: bottom_center
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_instagram:
-    weight: 7
+    weight: 8
     label: visually_hidden
     settings:
       link_to_entity: false
@@ -148,16 +149,25 @@ content:
     type: string
     region: center_center
   field_location:
-    weight: 11
+    weight: 1
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
+    region: top_left
   field_phone:
     type: telephone_link
-    weight: 4
+    weight: 5
     region: center_left
     label: visually_hidden
     settings:
@@ -165,7 +175,7 @@ content:
     third_party_settings: {  }
   field_portrait:
     type: image
-    weight: 2
+    weight: 3
     region: top_right
     label: hidden
     settings:
@@ -216,7 +226,7 @@ content:
             fis-def-at: false
             fi-def-at: false
   field_twitter:
-    weight: 6
+    weight: 7
     label: visually_hidden
     settings:
       link_to_entity: false
@@ -224,7 +234,7 @@ content:
     type: string
     region: center_center
   group_site_menu_entity_view_1:
-    weight: 1
+    weight: 2
     region: top_left
     settings: {  }
     third_party_settings: {  }
