--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -44,6 +44,7 @@ third_party_settings:
       content:
         - field_featured_media
         - field_summary
+        - field_location
         - group_site_menu_entity_view_1
         - field_featured_content
         - field_featured_groups
@@ -53,7 +54,7 @@ bundle: bureau_office
 mode: default
 content:
   field_featured_content:
-    weight: 3
+    weight: 4
     label: above
     settings:
       view_mode: featured
@@ -124,12 +125,21 @@ content:
             fi-def-at: false
     region: content
   field_location:
-    weight: 6
+    weight: 2
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
   field_summary:
     type: string
@@ -168,7 +178,7 @@ content:
             fis-def-at: false
             fi-def-at: false
   group_site_menu_entity_view_1:
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
