--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -42,6 +42,7 @@ third_party_settings:
       content:
         - field_featured_media
         - field_summary
+        - field_location
         - group_site_menu_entity_view_1
         - field_featured_content
         - field_featured_groups
@@ -51,7 +52,7 @@ bundle: program
 mode: default
 content:
   field_featured_content:
-    weight: 3
+    weight: 4
     label: above
     settings:
       view_mode: featured
@@ -69,7 +70,7 @@ content:
     region: content
   field_featured_groups:
     type: entity_reference_entity_view
-    weight: 4
+    weight: 5
     region: content
     label: above
     settings:
@@ -122,12 +123,21 @@ content:
     type: entity_reference_entity_view
     region: content
   field_location:
-    weight: 5
+    weight: 2
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
   field_summary:
     weight: 1
@@ -166,7 +176,7 @@ content:
     type: string
     label: hidden
   group_site_menu_entity_view_1:
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
