--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -47,12 +47,13 @@ third_party_settings:
         - field_featured_media
         - group_date
         - field_display_date_toggle
-        - field_summary
         - field_display_date
-        - group_site_menu_entity_view_1
+        - field_summary
         - field_start_date
-        - field_featured_content
+        - field_location
         - field_end_date
+        - group_site_menu_entity_view_1
+        - field_featured_content
         - field_featured_groups
         - field_map
   field_group:
@@ -124,7 +125,7 @@ content:
             lb-col: false
             classes: {  }
   field_featured_content:
-    weight: 4
+    weight: 5
     label: above
     settings:
       view_mode: featured
@@ -142,7 +143,7 @@ content:
     region: content
   field_featured_groups:
     type: entity_reference_entity_view
-    weight: 5
+    weight: 6
     region: content
     label: above
     settings:
@@ -195,16 +196,25 @@ content:
     type: entity_reference_entity_view
     region: content
   field_location:
-    weight: 7
+    weight: 3
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
   field_map:
     type: entity_reference_entity_view
-    weight: 6
+    weight: 7
     label: hidden
     settings:
       view_mode: embedded
@@ -271,7 +281,7 @@ content:
     type: string
     region: content
   group_site_menu_entity_view_1:
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
