--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -38,6 +38,7 @@ third_party_settings:
         - field_summary
         - toc_js
         - field_body_content
+        - field_location
 id: node.page.default
 targetEntityType: node
 bundle: page
@@ -87,35 +88,23 @@ content:
             fi-def-at: false
     type: entity_reference_entity_view
     region: content
-  field_include_in_menu:
-    weight: 6
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
   field_location:
     weight: 4
     region: content
-  field_menu_link_text:
-    weight: 5
+    type: entity_reference_entity_view
     label: above
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_menu_parent:
-    weight: 7
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     type: string
     weight: 1
@@ -161,7 +150,10 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_group: true
+  field_include_in_menu: true
   field_legacy_path: true
+  field_menu_link_text: true
+  field_menu_parent: true
   field_page_type: true
   field_popular: true
   field_related_content: true
