POWR-1566 composer update, db update, config export

--- a/web/sites/default/config/rules.reaction.send_email_to_reviewer_after_updating_existing_content.yml
+++ b/web/sites/default/config/rules.reaction.send_email_to_reviewer_after_updating_existing_content.yml
@@ -8,8 +8,7 @@ events:
   -
     event_name: 'rules_entity_update:node'
 description: 'When a content node is saved, send an email to the assigned reviewer.'
-tags:
-  - ''
+tags: {  }
 config_version: '3'
 expression:
   id: rules_rule
