--- a/web/sites/default/config/rules.reaction.send_email_to_reviewer_on_content_creation.yml
+++ b/web/sites/default/config/rules.reaction.send_email_to_reviewer_on_content_creation.yml
@@ -8,8 +8,7 @@ events:
   -
     event_name: 'rules_entity_insert:node'
 description: 'Send email to the reviewer if the new content is "In review" and has a reviewer assigned.'
-tags:
-  - ''
+tags: {  }
 config_version: '3'
 expression:
   id: rules_rule
