--- a/web/sites/default/config/menu_breadcrumb.settings.yml
+++ b/web/sites/default/config/menu_breadcrumb.settings.yml
@@ -6,7 +6,6 @@ append_member_page: false
 member_page_as_link: false
 remove_home: true
 add_home: false
-home_as_site_name: false
 exclude_empty_url: false
 menu_breadcrumb_menus:
   main:
@@ -46,3 +45,4 @@ menu_breadcrumb_menus:
     langhandle: 0
 _core:
   default_config_hash: MWtaH6iqiztF4V37kZZSpw-NZBbZijdlO_xMPIUCibY
+front_title: 1
