--- a/web/sites/default/config/group.role.bureau_office-editor.yml
+++ b/web/sites/default/config/group.role.bureau_office-editor.yml
@@ -24,6 +24,7 @@ permissions:
   - 'create group_node:event entity'
   - 'create group_node:news entity'
   - 'create group_node:page entity'
+  - 'create group_node:park_facility entity'
   - 'delete own group_media:audio entity'
   - 'delete own group_media:document entity'
   - 'delete own group_media:image entity'
@@ -35,6 +36,7 @@ permissions:
   - 'delete own group_node:news entity'
   - 'delete own group_node:notification entity'
   - 'delete own group_node:page entity'
+  - 'delete own group_node:park_facility entity'
   - 'leave group'
   - 'update any group_media:audio entity'
   - 'update any group_media:document entity'
@@ -49,6 +51,7 @@ permissions:
   - 'update any group_node:news entity'
   - 'update any group_node:notification entity'
   - 'update any group_node:page entity'
+  - 'update any group_node:park_facility entity'
   - 'update own group_media:audio entity'
   - 'update own group_media:document entity'
   - 'update own group_media:image entity'
@@ -62,6 +65,7 @@ permissions:
   - 'update own group_node:news entity'
   - 'update own group_node:notification entity'
   - 'update own group_node:page entity'
+  - 'update own group_node:park_facility entity'
   - 'view group'
   - 'view group_media:audio entity'
   - 'view group_media:document entity'
@@ -77,6 +81,7 @@ permissions:
   - 'view group_node:news entity'
   - 'view group_node:notification entity'
   - 'view group_node:page entity'
+  - 'view group_node:park_facility entity'
   - 'view unpublished group_media:audio entity'
   - 'view unpublished group_media:document entity'
   - 'view unpublished group_media:image entity'
@@ -89,3 +94,4 @@ permissions:
   - 'view unpublished group_node:news entity'
   - 'view unpublished group_node:notification entity'
   - 'view unpublished group_node:page entity'
+  - 'view unpublished group_node:park_facility entity'
