POWR-1452 Fix issues with renamed fields and map type values

--- a/web/sites/default/config/media.type.map.yml
+++ b/web/sites/default/config/media.type.map.yml
@@ -10,7 +10,7 @@ third_party_settings:
     image_field: _none
 id: map
 label: Map
-description: 'Embeds a map from Google Maps or a local geo file on a page.'
+description: 'An embedded map from Google Maps, Portland Maps, ArcGIS Online, or a local geo file.'
 source: media_embed_field
 queue_thumbnail_downloads: false
 new_revision: false
