--- a/web/sites/default/config/field.field.media.map.field_map_embed.yml
+++ b/web/sites/default/config/field.field.media.map.field_map_embed.yml
@@ -17,7 +17,7 @@ field_name: field_map_embed
 entity_type: media
 bundle: map
 label: 'Map URL or embed code'
-description: "Enter the Google Maps embed code obtained by following these steps:\r\n<ol>\r\n<li>Select <strong>Share or embed map</strong> from the Google Maps menu</li>\r\n<li>Select the <strong>Embed a map</strong> tab and click the <strong>Copy HTML</strong> button</li>\r\n<li>Paste the embed code into the field above</li>\r\n</ol>\r\n"
+description: "Enter the embed code or \"share URL\" from the external map source. For example, for Google Maps:\r\n<ol>\r\n<li>Select <strong>Share or embed map</strong> from the Google Maps menu</li>\r\n<li>Select the <strong>Embed a map</strong> tab and click the <strong>Copy HTML</strong> button</li>\r\n<li>Paste the embed code into the field above</li>\r\n</ol>\r\n"
 required: false
 translatable: false
 default_value: {  }
