--- a/web/sites/default/config/field.field.media.map.field_map_type.yml
+++ b/web/sites/default/config/field.field.media.map.field_map_type.yml
@@ -22,7 +22,7 @@ required: true
 translatable: false
 default_value:
   -
-    value: 'Google Map embed'
+    value: embedded
 default_value_callback: ''
 settings: {  }
 field_type: list_string
