--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -27,6 +27,7 @@ permissions:
   - 'create group_node:news entity'
   - 'create group_node:notification entity'
   - 'create group_node:page entity'
+  - 'create group_node:park_facility entity'
   - 'delete any group_media:audio content'
   - 'delete any group_media:audio entity'
   - 'delete any group_media:document content'
@@ -51,6 +52,8 @@ permissions:
   - 'delete any group_node:notification entity'
   - 'delete any group_node:page content'
   - 'delete any group_node:page entity'
+  - 'delete any group_node:park_facility content'
+  - 'delete any group_node:park_facility entity'
   - 'delete own group_media:audio content'
   - 'delete own group_media:audio entity'
   - 'delete own group_media:document content'
@@ -75,6 +78,8 @@ permissions:
   - 'delete own group_node:notification entity'
   - 'delete own group_node:page content'
   - 'delete own group_node:page entity'
+  - 'delete own group_node:park_facility content'
+  - 'delete own group_node:park_facility entity'
   - 'edit group'
   - 'leave group'
   - 'update any group_media:audio content'
@@ -101,6 +106,8 @@ permissions:
   - 'update any group_node:notification entity'
   - 'update any group_node:page content'
   - 'update any group_node:page entity'
+  - 'update any group_node:park_facility content'
+  - 'update any group_node:park_facility entity'
   - 'update own group_media:audio content'
   - 'update own group_media:audio entity'
   - 'update own group_media:document content'
@@ -126,6 +133,8 @@ permissions:
   - 'update own group_node:notification entity'
   - 'update own group_node:page content'
   - 'update own group_node:page entity'
+  - 'update own group_node:park_facility content'
+  - 'update own group_node:park_facility entity'
   - 'view group'
   - 'view group_media:audio content'
   - 'view group_media:audio entity'
