--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -5,32 +5,37 @@ dependencies:
   module:
     - search_api_solr
     - taxonomy
-    - node
     - group
+    - node
     - search_api
     - portland
   config:
-    - field.storage.node.field_community_actions
-    - field.storage.node.field_audience
-    - field.storage.node.field_body_content
-    - field.storage.node.field_end_date
-    - field.storage.node.field_end_time
+    - field.storage.group.field_audience
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
+    - field.storage.group.field_search_keywords
+    - field.storage.group.field_shortname_or_acronym
+    - field.storage.group.field_summary
+    - field.storage.group.field_topics
+    - field.storage.node.field_audience
+    - field.storage.node.field_body_content
+    - field.storage.node.field_city_section
+    - field.storage.node.field_community_actions
+    - field.storage.node.field_end_date
+    - field.storage.node.field_end_time
+    - field.storage.node.field_neighborhood
+    - field.storage.node.field_park_amenities_activities
+    - field.storage.node.field_park_location_type
     - field.storage.node.field_policy_category
     - field.storage.node.field_policy_type
     - field.storage.node.field_popular
     - field.storage.node.field_published_on
+    - field.storage.node.field_reservations_available
     - field.storage.node.field_search_keywords
     - field.storage.node.field_section_body
-    - field.storage.group.field_shortname_or_acronym
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
-    - field.storage.group.field_summary
     - field.storage.node.field_summary
-    - field.storage.group.field_audience
-    - field.storage.group.field_search_keywords
-    - field.storage.group.field_topics
     - field.storage.node.field_topics
     - search_api.server.searchstax
 third_party_settings:
@@ -148,6 +153,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_body_content
+  field_city_section:
+    label: 'City section'
+    datasource_id: 'entity:node'
+    property_path: field_city_section
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_city_section
   field_end_date:
     label: 'End date'
     datasource_id: 'entity:node'
@@ -164,6 +177,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_end_time
+  field_neighborhood:
+    label: Neighborhood
+    datasource_id: 'entity:node'
+    property_path: field_neighborhood
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_neighborhood
   field_official_organization_name:
     label: 'Official organization name'
     datasource_id: 'entity:group'
@@ -180,6 +201,22 @@ field_settings:
     dependencies:
       config:
         - field.storage.group.field_official_title
+  field_park_amenities_activities:
+    label: 'Park amenities/activities'
+    datasource_id: 'entity:node'
+    property_path: field_park_amenities_activities
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_park_amenities_activities
+  field_park_location_type:
+    label: 'Park location type'
+    datasource_id: 'entity:node'
+    property_path: field_park_location_type
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_park_location_type
   field_policy_category:
     label: 'Policy category'
     datasource_id: 'entity:node'
@@ -212,6 +249,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_published_on
+  field_reservations_available:
+    label: 'Reservations available'
+    datasource_id: 'entity:node'
+    property_path: field_reservations_available
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_reservations_available
   field_search_keywords:
     label: 'Search keywords'
     datasource_id: 'entity:node'
