--- a/web/sites/default/config/views.view.park_finder.yml
+++ b/web/sites/default/config/views.view.park_finder.yml
@@ -46,7 +46,7 @@ display:
       pager:
         type: full
         options:
-          items_per_page: 25
+          items_per_page: 30
           offset: 0
           id: 0
           total_pages: null
@@ -258,7 +258,31 @@ display:
             - field_body_content
             - field_search_keywords
           plugin_id: search_api_fulltext
-      sorts: {  }
+      sorts:
+        search_api_relevance:
+          id: search_api_relevance
+          table: search_api_index_full_index
+          field: search_api_relevance
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: search_api
+        content_title:
+          id: content_title
+          table: search_api_index_full_index
+          field: content_title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: search_api
       title: 'Park finder'
       header:
         result:
