--- a/web/modules/custom/portland_migrations/migrations/parks.yml
+++ b/web/modules/custom/portland_migrations/migrations/parks.yml
@@ -35,11 +35,11 @@ process:
     plugin: default_value
     default_value: simplified_editor_with_media_embed
   # https://www.portlandoregon.gov/parks/finder/index.cfm?action=ViewPark&PropertyID=48
-  field_legacy_path:
-    plugin: concat
-    source:
-      - 'constants/legacy_path_prefix'
-      - PropertyID
+  # field_legacy_path:
+  #   plugin: concat
+  #   source:
+  #     - 'constants/legacy_path_prefix'
+  #     - PropertyID
   field_hours_of_operation/value: SpecialInfo
   field_hours_of_operation/format:
     plugin: default_value
