POWR-1415 Add park history field in search

--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -23,6 +23,7 @@ dependencies:
     - field.storage.node.field_community_actions
     - field.storage.node.field_end_date
     - field.storage.node.field_end_time
+    - field.storage.node.field_history
     - field.storage.node.field_neighborhood
     - field.storage.node.field_park_amenities_activities
     - field.storage.node.field_park_location_type
@@ -177,6 +178,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_end_time
+  field_history:
+    label: History
+    datasource_id: 'entity:node'
+    property_path: field_history
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_history
   field_neighborhood:
     label: Neighborhood
     datasource_id: 'entity:node'
@@ -497,6 +506,7 @@ processor_settings:
       - audience_name
       - content_title
       - field_body_content
+      - field_history
       - field_official_organization_name
       - field_official_title
       - field_policy_category
