--- a/web/sites/default/config/views.view.park_finder.yml
+++ b/web/sites/default/config/views.view.park_finder.yml
@@ -256,6 +256,7 @@ display:
           fields:
             - content_title
             - field_body_content
+            - field_history
             - field_search_keywords
           plugin_id: search_api_fulltext
       sorts:
