--- a/web/sites/default/config/core.entity_view_display.node.park_facility.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.search_result.yml
@@ -59,7 +59,6 @@ third_party_settings:
         - field_park_location_type
         - field_neighborhood
         - field_park_address_or_entrance
-        - field_park_amenities_activities
     fields:
       node_title:
         plugin_id: node_title
@@ -137,22 +136,6 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-  field_park_amenities_activities:
-    type: entity_reference_label
-    weight: 5
-    region: second
-    label: hidden
-    settings:
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
   field_park_location_type:
     weight: 2
     label: hidden
@@ -191,6 +174,7 @@ hidden:
   field_instagram: true
   field_located_within: true
   field_location_status: true
+  field_park_amenities_activities: true
   field_portlandmaps_id: true
   field_portlandmaps_layer: true
   field_property_id: true
