--- a/web/sites/default/config/core.entity_view_display.node.park_facility.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.search_result.yml
@@ -53,8 +53,6 @@ third_party_settings:
           first: {  }
           second: {  }
     regions:
-      first:
-        - field_images
       second:
         - 'bundle_field:node'
         - node_title
@@ -64,7 +62,7 @@ third_party_settings:
     fields:
       node_title:
         plugin_id: node_title
-        weight: 2
+        weight: 1
         label: hidden
         formatter: default
         settings:
@@ -79,7 +77,7 @@ third_party_settings:
             classes: {  }
       'bundle_field:node':
         plugin_id: 'bundle_field:node'
-        weight: 1
+        weight: 0
         label: hidden
         formatter: default
         ft:
@@ -114,33 +112,16 @@ targetEntityType: node
 bundle: park_facility
 mode: search_result
 content:
-  field_images:
-    type: entity_reference_entity_view
-    weight: 0
-    region: first
-    label: hidden
-    settings:
-      view_mode: embedded_50
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: '1'
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
   field_neighborhood:
     type: entity_reference_rss_category
-    weight: 4
+    weight: 3
     region: second
     label: hidden
     settings: {  }
     third_party_settings: {  }
   field_park_address_or_entrance:
     type: entity_reference_entity_view
-    weight: 5
+    weight: 4
     region: second
     label: hidden
     settings:
@@ -156,7 +137,7 @@ content:
             lb-col: false
             classes: {  }
   field_park_location_type:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       link: false
@@ -189,6 +170,7 @@ hidden:
   field_facebook: true
   field_history: true
   field_hours_of_operation: true
+  field_images: true
   field_instagram: true
   field_located_within: true
   field_location_status: true
