addig workflow to external resource content type

--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -8,6 +8,7 @@ dependencies:
     - node.type.city_service
     - node.type.development_permit
     - node.type.event
+    - node.type.external_resource
     - node.type.news
     - node.type.notification
     - node.type.page
@@ -90,6 +91,7 @@ type_settings:
       - city_service
       - development_permit
       - event
+      - external_resource
       - news
       - notification
       - page
