--- a/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
@@ -29,9 +29,8 @@ third_party_settings:
     regions:
       content:
         - field_service_location_type
-        - field_location
-        - service_location_directions_link_entity_view_1
         - field_open_hours
+        - field_location
         - field_summary
         - field_body_content
         - locations_eva_service_locaton_map
@@ -42,14 +41,14 @@ mode: default
 content:
   field_body_content:
     type: text_default
-    weight: 5
+    weight: 4
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
   field_location:
     type: entity_reference_entity_view
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings:
@@ -65,7 +64,7 @@ content:
             lb-col: false
             classes: {  }
   field_open_hours:
-    weight: 3
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -88,7 +87,7 @@ content:
     type: entity_reference_label
     region: content
   field_summary:
-    weight: 4
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
@@ -124,12 +123,7 @@ content:
     type: string
     region: content
   locations_eva_service_locaton_map:
-    weight: 6
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  service_location_directions_link_entity_view_1:
-    weight: 2
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -143,3 +137,4 @@ hidden:
   group_content: true
   links: true
   scheduled_publication: true
+  service_location_directions_link_entity_view_1: true
