--- a/web/sites/default/config/core.entity_view_display.node.service_location.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.related.yml
@@ -35,16 +35,19 @@ third_party_settings:
         link_custom: ''
         classes:
           layout_class: {  }
+          first: {  }
+          second: {  }
     regions:
+      first:
+        - locations_eva_service_locaton_map
       second:
         - node_title
-        - field_location
-        - service_location_directions_link_entity_view_1
         - field_open_hours
+        - field_location
     fields:
       node_title:
         plugin_id: node_title
-        weight: 0
+        weight: 1
         label: hidden
         formatter: default
         settings:
@@ -64,7 +67,7 @@ mode: related
 content:
   field_location:
     type: entity_reference_entity_view
-    weight: 1
+    weight: 3
     region: second
     label: above
     settings:
@@ -80,7 +83,7 @@ content:
             lb-col: false
             classes: {  }
   field_open_hours:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -88,13 +91,8 @@ content:
     type: string
     region: second
   locations_eva_service_locaton_map:
-    weight: 10
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-  service_location_directions_link_entity_view_1:
-    weight: 2
-    region: second
+    weight: 0
+    region: first
     settings: {  }
     third_party_settings: {  }
 hidden:
@@ -109,5 +107,5 @@ hidden:
   field_summary: true
   group_content: true
   links: true
-  locations_eva_service_locaton_map: true
   scheduled_publication: true
+  service_location_directions_link_entity_view_1: true
