POWR-1400 re-update and re-export configs with updated legacy path handling

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
@@ -130,6 +130,7 @@ hidden:
   field_featured_content: true
   field_featured_groups: true
   field_featured_media: true
+  field_location: true
   field_logo: true
   field_menu_link: true
   field_parent_group: true
