--- a/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
@@ -123,6 +123,7 @@ hidden:
   field_featured_media: true
   field_group: true
   field_include_in_menu: true
+  field_location: true
   field_menu_link_text: true
   field_menu_parent: true
   field_popular: true
