--- a/web/sites/default/config/views.view.content.yml
+++ b/web/sites/default/config/views.view.content.yml
@@ -1,6 +1,6 @@
 uuid: e755469f-111c-4ad4-819a-13c038622717
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - field.storage.node.field_group
@@ -73,7 +73,6 @@ display:
             name: name
             changed: changed
             moderation_state: moderation_state
-            field_legacy_path: field_legacy_path
             operations: operations
           info:
             node_bulk_form:
@@ -126,11 +125,6 @@ display:
             moderation_state:
               sortable: false
               default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_legacy_path:
               align: ''
               separator: ''
               empty_column: false
