--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
@@ -119,6 +119,7 @@ hidden:
   field_featured_content: true
   field_featured_groups: true
   field_featured_media: true
+  field_location: true
   field_logo: true
   field_menu_link: true
   field_official_organization_name: true
