--- a/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
@@ -82,6 +82,7 @@ hidden:
   field_featured_content: true
   field_featured_groups: true
   field_instagram: true
+  field_location: true
   field_menu_link: true
   field_portrait: true
   field_search_keywords: true
