--- a/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
@@ -114,6 +114,7 @@ hidden:
   field_featured_content: true
   field_featured_groups: true
   field_instagram: true
+  field_location: true
   field_menu_link: true
   field_official_title: true
   field_phone: true
