--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -236,6 +236,7 @@ hidden:
   field_featured_content: true
   field_featured_groups: true
   field_featured_media: true
+  field_location: true
   field_map: true
   field_parent_group: true
   field_phone: true
