--- a/web/sites/default/config/core.entity_view_display.node.page.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.teaser.yml
@@ -116,6 +116,7 @@ hidden:
   field_featured_media: true
   field_group: true
   field_include_in_menu: true
+  field_location: true
   field_menu_link_text: true
   field_menu_parent: true
   field_popular: true
