POWR 1569 update caching strategies

--- a/web/sites/default/config/views.view.events_index.yml
+++ b/web/sites/default/config/views.view.events_index.yml
@@ -538,7 +538,7 @@ display:
         filters: false
         filter_groups: false
         header: false
-        cache: false
+        cache: true
       title: 'Search events'
       display_description: ''
       filters:
@@ -696,8 +696,6 @@ display:
           empty: false
           content: 'Displaying @start - @end of @total events that match your search. <a href="/events">View upcoming events</a>.  <a href="/events/past">View past events</a>.'
           plugin_id: result
-      cache:
-        type: none
     cache_metadata:
       max-age: -1
       contexts:
