--- a/web/sites/default/config/views.view.groups_by_topic.yml
+++ b/web/sites/default/config/views.view.groups_by_topic.yml
@@ -350,7 +350,7 @@ display:
         title: false
         filters: false
         filter_groups: false
-        cache: false
+        cache: true
       fields:
         id:
           id: id
@@ -583,9 +583,6 @@ display:
         operator: AND
         groups:
           1: AND
-      cache:
-        type: none
-        options: {  }
     cache_metadata:
       max-age: -1
       contexts:
