--- a/web/sites/default/config/views.view.locked_content.yml
+++ b/web/sites/default/config/views.view.locked_content.yml
@@ -31,7 +31,7 @@ display:
         options:
           perm: 'administer nodes'
       cache:
-        type: none
+        type: tag
         options: {  }
       query:
         type: views_query
