--- a/web/sites/default/config/views.view.sitewide_bureau_office_index.yml
+++ b/web/sites/default/config/views.view.sitewide_bureau_office_index.yml
@@ -306,7 +306,8 @@ display:
         context: '0'
         menu_name: main
       cache:
-        type: none
+        type: search_api_tag
+        options: {  }
       defaults:
         cache: false
     cache_metadata:
