--- a/web/sites/default/config/views.view.services_fullindex.yml
+++ b/web/sites/default/config/views.view.services_fullindex.yml
@@ -304,7 +304,8 @@ display:
         context: '0'
         menu_name: main
       cache:
-        type: none
+        type: search_api_tag
+        options: {  }
       defaults:
         cache: false
     cache_metadata:
