--- a/web/sites/default/config/views.view.watchdog.yml
+++ b/web/sites/default/config/views.view.watchdog.yml
@@ -27,7 +27,7 @@ display:
         options:
           perm: 'access site reports'
       cache:
-        type: none
+        type: tag
         options: {  }
       query:
         type: views_query
