--- a/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
@@ -50,7 +50,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_alert_text:
-    weight: 16
+    weight: 17
     settings:
       rows: 3
       placeholder: ''
@@ -92,7 +92,7 @@ content:
     region: content
   field_documents:
     type: entity_browser_entity_reference
-    weight: 13
+    weight: 14
     settings:
       entity_browser: document_browser_embed
       field_widget_display: rendered_entity
@@ -114,7 +114,7 @@ content:
     type: string_textfield
     region: content
   field_history:
-    weight: 14
+    weight: 15
     settings:
       rows: 5
       placeholder: ''
@@ -175,7 +175,7 @@ content:
     type: chosen_select
     region: content
   field_location_status:
-    weight: 15
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -214,7 +214,7 @@ content:
     type: options_select
     region: content
   field_portlandmaps_id:
-    weight: 18
+    weight: 19
     settings:
       size: 60
       placeholder: ''
@@ -225,7 +225,7 @@ content:
     type: string_textfield
     region: content
   field_portlandmaps_layer:
-    weight: 17
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -241,10 +241,14 @@ content:
     region: content
   field_redirects:
     type: string_textfield
-    weight: 19
+    weight: 20
     region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_reservations_available:
-    weight: 12
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -290,7 +294,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 25
+    weight: 26
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -333,7 +337,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
-  field_reservations_available: true
   group_content: true
   panelizer: true
   promote: true
