POWR-1415 Update park finder path

--- a/web/sites/default/config/views.view.park_finder.yml
+++ b/web/sites/default/config/views.view.park_finder.yml
@@ -329,7 +329,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: park-finder
+      path: parks/finder
       cache:
         type: none
       defaults:
