--- a/web/sites/default/config/block.block.parklocationtype.yml
+++ b/web/sites/default/config/block.block.parklocationtype.yml
@@ -24,6 +24,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: /park-finder
+    pages: /parks/finder
     negate: false
     context_mapping: {  }
