--- a/web/modules/custom/portland_migrations/portland_migrations.services.yml
+++ b/web/modules/custom/portland_migrations/portland_migrations.services.yml
@@ -1,5 +1,5 @@
 services:
   post_migration_subscriber:
-    class: '\Drupal\portland_migrations\EventSubscriber\PostMigrationSubscriber'
+    class: '\Drupal\portland_migrations\EventSubscriber\MigrationSubscriber'
     tags:
       - { name: 'event_subscriber'}
