POWR-1539 Add PDF/image map source to map media type

--- a/web/sites/default/config/field.storage.media.field_map_file.yml
+++ b/web/sites/default/config/field.storage.media.field_map_file.yml
@@ -1,4 +1,4 @@
-uuid: 4a60dd91-6adb-432d-ac5b-f6ee356d7a9f
+uuid: 5f7848b9-a69e-42fe-a63e-441e16b61438
 langcode: en
 status: true
 dependencies:
@@ -9,13 +9,13 @@ dependencies:
 third_party_settings:
   field_permissions:
     permission_type: public
-id: media.field_geo_file
-field_name: field_geo_file
+id: media.field_map_file
+field_name: field_map_file
 entity_type: media
 type: file
 settings:
   display_field: false
-  display_default: true
+  display_default: false
   uri_scheme: public
   target_type: file
 module: file
