--- a/web/sites/default/config/facets.facet.city_section.yml
+++ b/web/sites/default/config/facets.facet.city_section.yml
@@ -34,12 +34,6 @@ hard_limit: 0
 exclude: false
 only_visible_when_facet_source_is_visible: true
 processor_configs:
-  active_widget_order:
-    processor_id: active_widget_order
-    weights:
-      sort: 20
-    settings:
-      sort: DESC
   count_limit:
     processor_id: count_limit
     weights:
@@ -47,22 +41,16 @@ processor_configs:
     settings:
       minimum_items: 1
       maximum_items: null
-  count_widget_order:
-    processor_id: count_widget_order
-    weights:
-      sort: 30
-    settings:
-      sort: DESC
   display_value_widget_order:
     processor_id: display_value_widget_order
     weights:
       sort: 40
     settings:
       sort: ASC
-  translate_entity:
-    processor_id: translate_entity
+  tid_to_name:
+    processor_id: tid_to_name
     weights:
-      build: 5
+      build: 36
     settings: {  }
   url_processor_handler:
     processor_id: url_processor_handler
