--- a/web/sites/default/config/core.entity_view_display.group.elected_official.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.featured.yml
@@ -17,10 +17,10 @@ dependencies:
     - field.field.group.elected_official.field_featured_content
     - field.field.group.elected_official.field_featured_groups
     - field.field.group.elected_official.field_instagram
+    - field.field.group.elected_official.field_location
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
-    - field.field.group.elected_official.field_portrait
     - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
@@ -116,7 +116,6 @@ hidden:
   field_menu_link: true
   field_official_title: true
   field_phone: true
-  field_portrait: true
   field_search_keywords: true
   field_shortname_or_acronym: true
   field_twitter: true
