POWR-1519 try again with timestamp fields

--- a/web/modules/custom/portland_relations/portland_relations.info.yml
+++ b/web/modules/custom/portland_relations/portland_relations.info.yml
@@ -1,5 +1,5 @@
 name: 'Portland Relations'
 type: module
-description: 'Allows the creation of entities that logically join two content types.'
+description: 'Allows creation of simple relation entities for joining content types.'
 core: 8.x
 package: 'Custom'
