--- a/web/modules/custom/portland_relations/portland_relations.permissions.yml
+++ b/web/modules/custom/portland_relations/portland_relations.permissions.yml
@@ -12,11 +12,8 @@ delete relation entities:
 edit relation entities:
   title: 'Edit Relation entities'
 
-view published relation entities:
-  title: 'View published Relation entities'
-
-view unpublished relation entities:
-  title: 'View unpublished Relation entities'
+view relation entities:
+  title: 'View Relation entities'
 
 permission_callbacks:
   - \Drupal\portland_relations\RelationPermissions::generatePermissions
