POWR-1370 Fix config conflicts

--- a/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
@@ -119,6 +119,7 @@ hidden:
   field_location: true
   field_menu_link: true
   field_official_title: true
+  field_person_image: true
   field_phone: true
   field_search_keywords: true
   field_shortname_or_acronym: true
