--- a/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
@@ -84,6 +84,7 @@ hidden:
   field_instagram: true
   field_location: true
   field_menu_link: true
+  field_person_image: true
   field_search_keywords: true
   field_shortname_or_acronym: true
   field_summary: true
